[package]
name = "spectrePSE"
version = "0.1.0"
authors = ["MrishoLukamba"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
pink-extension = { version = "0.4.2", default-features = false }
pink-web3 = { version = "0.19.0", features = ["pink", "signing"], default-features = false}
[dev-dependencies]
pink-extension-runtime = "0.4"

[lib]
name = "spectrePSE"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-web3/std"
]
ink-as-dependency = []
